[tool.poetry]
name = "classic-cryptography"
description = """Excerise for the "Programmiersprachen zur Datenanalyse" course at FH Bielefeld"""
version = "0.0.2"
readme = "README.md"
license = "MIT"
authors = ["Daniel Kappe <daniel.kappe@fh-bielefeld.de>"]
packages = [{include = "ciphers"}]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
mypy = "^1.1.1"
black = "^23.3.0"
ruff = "^0.0.260"
coverage = "^7.2.2"
pre-commit = "^3.2.1"

[tool.ruff]
select = [ "F", "E", "I", "N", "RET", "ARG" ]
ignore = [ "E501" ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"